add_library(net OBJECT
        api.hh
        arp.cc
        arp.hh
        byteorder.hh
        const.hh
        dhcp.cc
        dhcp.hh
        dns.cc
        dns.hh
        dpdk.cc
        dpdk.hh
        ethernet.cc
        ethernet.hh
        inet_address.cc
        inet_address.hh
        ip.cc
        ip_checksum.cc
        ip_checksum.hh
        ip.hh
        native-stack.cc
        native-stack.hh
        native-stack-impl.hh
        net.cc
        net.hh
        packet.cc
        packet-data-source.hh
        packet.hh
        packet-util.hh
        posix-stack.cc
        posix-stack.hh
        proxy.cc
        proxy.hh
        socket_defs.hh
        stack.cc
        stack.hh
        tcp.cc
        tcp.hh
        tcp-stack.hh
        tls.cc
        tls.hh
        toeplitz.hh
        udp.cc
        udp.hh
        virtio.cc
        virtio.hh
        virtio-interface.hh)