add_library(util OBJECT
        backtrace.cc
        backtrace.hh
        bool_class.hh
        conversions.cc
        conversions.hh
        defer.hh
        eclipse.hh
        function_input_iterator.hh
        gcc6-concepts.hh
        indirect.hh
        is_smart_ptr.hh
        lazy.hh
        log.cc
        log-cli.hh
        log.hh
        noncopyable_function.hh
        print_safe.hh
        program-options.cc
        program-options.hh
        reference_wrapper.hh
        spinlock.hh
        transform_iterator.hh
        tuple_utils.hh)